[gd_scene load_steps=7 format=2]

[ext_resource path="res://Engine/dialogue/Diag.gd" type="Script" id=1]
[ext_resource path="res://Engine/dialogue/dialogue_box.png" type="Texture" id=2]
[ext_resource path="res://NPC/Boque/boqueFaces.png" type="Texture" id=3]
[ext_resource path="res://Engine/Fonts/FontQuestSmall.tres" type="DynamicFont" id=4]
[ext_resource path="res://Engine/dialogue/dialogue_choice.png" type="Texture" id=5]
[ext_resource path="res://Engine/dialogue/dialogue_choice_selected.png" type="Texture" id=6]

[node name="Diag" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="dialogue_box" type="Sprite" parent="."]
position = Vector2( 192, 24 )
texture = ExtResource( 2 )

[node name="Face" type="Sprite" parent="."]
position = Vector2( 22, 24 )
texture = ExtResource( 3 )
vframes = 8
hframes = 8

[node name="TextBox" type="Label" parent="."]
editor/display_folded = true
margin_left = 45.0
margin_top = 3.0
margin_right = 363.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labor"
autowrap = true

[node name="Timer" type="Timer" parent="TextBox"]

[node name="Choices" type="Node2D" parent="."]
position = Vector2( 333, 51 )

[node name="dialogue_choice" type="Sprite" parent="Choices"]
position = Vector2( 16, 10 )
texture = ExtResource( 5 )

[node name="dialogue_choice2" type="Sprite" parent="Choices"]
position = Vector2( 16, 40 )
texture = ExtResource( 5 )

[node name="Selection" type="Node2D" parent="Choices"]
position = Vector2( 4, 0 )

[node name="dialogue_choice_selected" type="Sprite" parent="Choices/Selection"]
position = Vector2( 12, 10 )
texture = ExtResource( 6 )

[node name="Choice1" type="Label" parent="Choices"]
margin_left = -21.0
margin_top = 2.0
margin_right = 53.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "Yes"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Choice2" type="Label" parent="Choices"]
margin_left = -22.0
margin_top = 31.0
margin_right = 52.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "No"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
